# brickout

./: .gitignore  CMakeLists.txt  DEVELOPING.md  Makefile  README.md  sdkconfig  sdkconfig.old
md/: DEVELOPING.md
resources/Audio/: Intro.xm  Stage_1.xm
scripts/: install-esp-idf.sh
src/: GGame.cpp  GResources.h  GSoundPlayer.cpp  GSoundPlayer.h  Game.h  Resources.r  component.mk  main.cpp
src/GameState/: GBallProcess.cpp  GBallProcess.h  GBlockProcess.cpp  GBlockProcess.h  GBrickProcess.cpp  GBrickProcess.h  GGamePlayfield.cpp  GGamePlayfield.h  GGameState.cpp  GGameState.h  GPaddleProcess.cpp  GPaddleProcess.h
src/SplashState/: GSplashProcess.cpp  component.mk
src/TitleState/: GTitlePlayfield.h  GTitleProcess.cpp  GTitleProcess.h  GTitleState.h
