CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(brickout)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-implicit-exception-spec-mismatch")

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/creative-engine/cmake.files)


# Include Creative Engine
# Exports:
    # ${CREATIVE_ENGINE_INCLUDE_DIRS} - used in INCLUDE_DIRECTORIES(...)
    # ${CREATIVE_ENGINE_SOURCE_FILES} - used in ADD_EXECUTABLE(...)
    # ${CREATIVE_ENGINE_LINK_LIBRARIES} - used in TARGET_LINK_LIBRARIES(...)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/creative-engine/CreativeEngine.cmake)


INCLUDE_DIRECTORIES(BRICKOUT_INCLUDE_DIRS
    ${CMAKE_SOURCE_DIR}/src
    ${CMAKE_SOURCE_DIR}/src/GameState
    ${CMAKE_SOURCE_DIR}/src/TitleState
    ${CMAKE_SOURCE_DIR}/src/MainOptionsState
    ${CMAKE_SOURCE_DIR}/src/SplashState
    ${CMAKE_SOURCE_DIR}/src/RulesState
    ${CMAKE_BINARY_DIR}/usr/local/include
)

INCLUDE_DIRECTORIES(
    ${BRICKOUT_INCLUDE_DIRS}
    ${CREATIVE_ENGINE_INCLUDE_DIRS}
)

# gather Brickout sources
FILE(GLOB_RECURSE BRICKOUT_SRC RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp")

ADD_EXECUTABLE(
    ${PROJECT_NAME}
    Resources.bin
    ${CREATIVE_ENGINE_SOURCE_FILES}
    ${BRICKOUT_SRC}
)

# make brickout.app
if (APPLE)
    SET_TARGET_PROPERTIES(brickout PROPERTIES MACOSX_BUNDLE TRUE)
    INSTALL(TARGETS brickout DESTINATION ".")
endif (APPLE)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CREATIVE_ENGINE_LINK_LIBRARIES})
